2009-12-04 Borut Razem <borut.razem AT siol.net>

	* lib/send-mail.mk, lib/bootstrap.mk:
	  removed per target logging, send-mail target is noop

2009-10-12 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: search makensis in standard locations if
	  not found in NSISBIN

2008-02-08 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: add COPYING3.txt to win32 setup package

2008-12-18 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/upload.mk: defaults for DCF
	* lib/upload.mk: removed remove-old-versions makefile target

2008-11-09 Borut Razem <borut.razem AT siol.net>

	* lib/ports.mk: commented out ports/i186.mk and ports/tlcs900h.mk
	  to remove "configure: WARNING: unrecognized options:
	  --disable-i186-port, --disable-tlcs900h-port"

2008-09-23 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk:
	  new SF web server sdcc-builder,sdcc@web.sourceforge.net

2008-03-31 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html - 2nd try

2008-03-24 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: generate knownbugs.html

2008-03-16 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: rename COPYING.TX to COPYING.txt

2008-03-10 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: include ChangeLog into the doc archive

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: TARGETCC = "/Xcode2.5/usr/bin/gcc"
	  TARGETCXX = "/Xcode2.5/usr/bin/g++"

2008-02-20 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 2.5; binaries generated with Xcode 3.0 seems not to be
	  backward compatible with Mac OS X 10.4 and older

2008-02-14 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 3.0

2008-01-13 Borut Razem <borut.razem AT siol.net>

	* Makefile, lib/bootstrap.mk, lib/variables.mk, lib/version.mk: